# bpetok

./: .gitignore  LICENSE  README.md  byte_bpe.json  pyproject.toml
bpetok/: __init__.py  cli.py  encode_decode.py  metrics.py  model.py  normalize.py  trainer.py  utils.py
data/: train_small.txt
out_byte/: merges.txt  model.json  test.decoded.txt  test.tok  valid.decoded.txt  valid.tok  vocab.json
tests/: __init__.py  test_merges_order.py  test_metrics.py  test_roundtrip.py
